fixed breadcrum toolbar layout issue on small devices; showing detail (offer) in breadcrum

--- a/angular/material/utilities.less
+++ b/angular/material/utilities.less
@@ -388,6 +388,32 @@ md-icon
       transition: all .3s;
     }
   }
+  &.medium-icon
+  {
+    margin:     0;
+    font-size:  48px;
+    min-width:  48px;
+    min-height: 48px;
+    &.material-icons
+    {
+      color:      @blue;
+      fill:       @blue;
+      transition: all .3s;
+    }
+  }
+  &.small-icon
+  {
+    margin:     0;
+    font-size:  24px;
+    min-width:  24px;
+    min-height: 24px;
+    &.material-icons
+    {
+      color:      @blue;
+      fill:       @blue;
+      transition: all .3s;
+    }
+  }
   &.normal
   {
     svg
